Loading SVG with 0x0 instrinsic dimension should dispatch load event.

Loading SVG with 0x0 instrinsic dimension should dispatch load event
rather than unexpected 'error' event.
As per spec, zero intrinsic size SVG is a valid image.

Bug: 776710
Change-Id: I10f17b7aa2d1a127b7e330b4750e1c8bcbe1965a