third_party/WebKit/Source/core/svg/graphics/SVGImage.cpp
@@ -807,7 +807,7 @@ Image::SizeAvailability SVGImage::DataChanged(bool all_data_received) {
       return kSizeAvailableAndLoadingAsynchronously;
 
     case kLoadCompleted:
-      return kSizeAvailable;
+      return SvgRootElement(page_.Get()) ? kSizeAvailable : kSizeUnavailable;
 
     case kDataChangedNotStarted:
     case kWaitingForAsyncLoadCompletion:
